# loremclipsum

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  loremclipsum.rb
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/workflows/: commit-lint.yml
Formula/: loremclipsum.rb
loremclipsum/: loremclipsum
src/: ipsums.rs  main.rs
