[package]
name = "loremclipsum"
version = "0.1.0"
authors = ["Lorenzo Pieri, 404answernotfound"]
license = "MIT"
description = "A cli tool to copy paste different ipsums"
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clipboard = "0.5.0"